--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(Euler)
 cmake_minimum_required(VERSION 2.8)
 add_subdirectory(Problem1)
+add_subdirectory(Problem2)
 set(CMAKE_CXX_FLAGS "-std=c++17")
