--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ project(Euler)
 cmake_minimum_required(VERSION 2.8)
 add_subdirectory(Problem1)
 add_subdirectory(Problem2)
+add_subdirectory(Problem3)
 set(CMAKE_CXX_FLAGS "-std=c++17")
