--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(Problem1)
 add_subdirectory(Problem2)
 add_subdirectory(Problem3)
+add_subdirectory(Problem4)
 set(CMAKE_CXX_FLAGS "-std=c++17")
