--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ add_subdirectory(Problem1)
 add_subdirectory(Problem2)
 add_subdirectory(Problem3)
 add_subdirectory(Problem4)
+add_subdirectory(Problem5)
 set(CMAKE_CXX_FLAGS "-std=c++17")
