--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(Problem2)
 add_subdirectory(Problem3)
 add_subdirectory(Problem4)
 add_subdirectory(Problem5)
+add_subdirectory(Problem6)
 set(CMAKE_CXX_FLAGS "-std=c++17")
