--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_subdirectory(Problem3)
 add_subdirectory(Problem4)
 add_subdirectory(Problem5)
 add_subdirectory(Problem6)
+add_subdirectory(Problem7)
 set(CMAKE_CXX_FLAGS "-std=c++17")
