--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(Problem4)
 add_subdirectory(Problem5)
 add_subdirectory(Problem6)
 add_subdirectory(Problem7)
+add_subdirectory(Problem8)
 set(CMAKE_CXX_FLAGS "-std=c++17")
